tests/a/tests/integrity/fail/if/if.0.stderr
error: expected {bin}{bin}, found {bin}{bin,c}
  --> tests/integrity/fail/if/if.0.rs:11:9
   |
11 |         5
   |         ^
